# EasyMediaPlayer-video

./: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  README.md  build.sh  build_easyMediaPlayer  eMP_video  easyMediaPlayer  env  lv_conf.h  lv_drv_conf.h  main.c  main.cpp
include/: Model.h  View.h  common_inc.h  hal.h  lv_anim_timeline_wrapper.h  lv_obj_ext_func.h  mediaPlayer.h
libs/: lv_conf.h
libs/lvgl/src/extra/libs/png/: lodepng.c
lvgl/src/extra/libs/gif/: gifdec.c
src/: MediaPlayer.cpp  MyPlayer.cpp  MyPlayer.h  main.cpp  mediaPlayer.c  mediaPlayer.h  source.mk
src/MediaPlayer/: MediaPlayer.cpp
src/Page/: Model.cpp  View.cpp
src/Utils/lv_ext/: lv_anim_timeline_wrapper.c
src/hal/: hal.cpp
